@startuml

class Compte {
    ---
    identification: String
    authentification: ???
    droits: ???
}

class Organisation {
    demandeur: Recruteur
    autorisation: Administrateur
    statut: {acceptée, refusée, en attente}
    ---
    nom
    adresse
}

class Recruteur {
    autorisation: Administrateur
    statut: {accepté, refusé, en attente}
    organisation: Organisation
    nom: String
    prenom: String
}

class Candidat {
    nom: String
    prenom: String
    biographie: String
    qualifications: String
}

class Administrateur {
    autorisation: Administrateur
    statut: {accepté, refusé, en attente}
}

class OffreEmploi {
    recruteur: Recruteur
    statut: {expirée, ouverte, ...}
    fiche: FichePoste
    ---
    tags: ???
}

class Candidature {
    candidat: Candidat
    offre: Offre
    statut: {acceptée, refusée, en attente}
    ---
    contenu: ???
}

class FichePoste {
    createur: Recruteur
    organisation: Organisation
    ---
    responsable: string
}


Candidat <-- Compte
Recruteur <-- Compte
Administrateur <-- Compte
Recruteur "*" -- "1" Organisation: "Sollicite"

Candidature "*" -- "1" OffreEmploi: "Recoit"
Candidature "*" -- "1" Candidat: "Dépose"

OffreEmploi "*" -- "1" Recruteur: "Emet"
Organisation "*" -- "1" Recruteur: "Soumet"

FichePoste "*" -- "1" Recruteur: "Crée"
FichePoste "*" -- "1" Organisation: "Concerne"
OffreEmploi "*" -- "1" FichePoste: "Utilise"

Recruteur "*" -- "1" Administrateur: "Autorise"
Administrateur "*" -- "1" Administrateur: "Autorise"
Organisation "*" -- "1" Administrateur: "Autorise"

@enduml